working on style changes for overall app

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@ body, html {
     position: relative;
     width: 100%;
     max-width: 1280px;
-    background-color: rgb(49, 49, 49);
+    background-color: #606c38;
     height: 80px;
     margin: 0px auto 20px auto;
     padding: 0px;
@@ -31,7 +31,7 @@ body, html {
     display: flex;
     position: relative;
     width: 100%;
-    background-color: rgb(49, 49, 49);
+    background-color: #606c38;
     height: 80px;
     margin: 0px auto 20px auto;
     padding: 0px;
@@ -144,7 +144,7 @@ div.slogan_container .slogan_title {
 div.slogan_container .slogan_body {
   grid-column: 1;
   grid-row: 1;
-  margin: 40px 20px 20px 0px;
+  margin: 20px;
 }
 
 div.slogan_container .slogan_list {
@@ -163,9 +163,16 @@ div.slogan_container .slogan_list {
 }
 
 .slogan_list ul li:before {
+  color: #606c38;
   content: '✔';
   font-size: 1.2rem;
   margin-right: 10px;
+}
+
+.slogan_and_description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* OVERVIEW ******************************************************************/
@@ -340,7 +347,7 @@ body div.component div.related-products .carousel {
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  background-color: rgba(199, 85, 85, 0.5);
+  background-color: #606c38;
 }
 
 .carouselInner button {
@@ -395,7 +402,24 @@ div.searchBar_container .searchbar {
   width: 100%;
   color:rgb(87, 87, 87);
   border: none;
-  border: 1px solid black;
+  border: 1px solid rgb(87, 87, 87);
+  margin: 10px 0px;
+  padding: 0px 15px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 1.1rem;
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+.searchbar:focus {
+  height: 65px;
+  width: 100%;
+  color:rgb(87, 87, 87);
+  border: none;
+  outline: none;
+  box-shadow: 0 0 0 2pt #606c38;
   margin: 10px 0px;
   padding: 0px 15px;
   -webkit-box-sizing: border-box;
@@ -425,6 +449,10 @@ div.searchBar_container .noMatch {
 /* Q&A CONTAINER */
 div.q_a_container {
   margin: 10px 0px;
+  max-width: 1020px;
+  max-height: 650px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 div.q_a_container div.questions {
@@ -434,7 +462,7 @@ div.q_a_container div.questions {
   align-items: flex-end;
 }
 
-div.questions .q_a_question_text {
+div.questions #q_a_question_text {
   margin-left: 5px;
 }
 
@@ -514,9 +542,42 @@ div.answers img {
 
 /* Q&A SECTION FOOTER */
 div.answers .q_a_footer {
+  display: flex;
+  justify-content: start;
+  height: 15px;
+  width: 100%;
   font-size: .7rem;
   margin: 10px 25px 20px 30px;
   color:rgb(87, 87, 87);
+}
+
+.q_a_footer .q_a_footer_item_first {
+  display: flex;
+  height: 15px;
+  width: auto;
+}
+
+.q_a_footer .q_a_footer_item {
+  display: flex;
+  height: 15px;
+  width: auto;
+  margin: 0px 5px;
+}
+
+.q_a_footer .q_a_footer_item_yes {
+  display: flex;
+  height: 15px;
+  width: auto;
+  margin: 0px 5px;
+  cursor: pointer;
+}
+
+.q_a_footer .q_a_footer_item_report {
+  display: flex;
+  height: 15px;
+  width: auto;
+  margin: 0px 5px;
+  cursor: pointer;
 }
 
 
@@ -526,7 +587,7 @@ div.q_a_component div.q_a_buttons {
   margin: 10px 0px;
 }
 
-div.q_a_buttons .buttons {
+/* div.q_a_buttons .buttons {
   display: inline-block;
   height: 65px;
   margin: 10px 0px;
@@ -534,6 +595,20 @@ div.q_a_buttons .buttons {
   font-size: 1rem;
   border: none;
   border: 1px solid black;
+  padding: 0px 20px;
+  color: rgb(87, 87, 87);
+  cursor: pointer;
+  margin-right: 20px;
+} */
+
+div.q_a_buttons .buttons {
+  display: inline-block;
+  height: 50px;
+  margin: 10px 0px;
+  font-weight: bold;
+  font-size: .9rem;
+  border: 1px solid rgb(87, 87, 87);
+  border-radius: 4px;
   padding: 0px 20px;
   color: rgb(87, 87, 87);
   cursor: pointer;
@@ -613,7 +688,7 @@ body div.component div.reviewsRatingsContainer .ratingComponent{
   background: #f4f7f8;
   border-radius: 15px;
   padding: 20px;
-  border: 5px solid rgba(114, 170, 114, 0.726);
+  border: 5px solid #606c38;
   overflow: auto;
   z-index: 999;
   margin-top: 5vh;
@@ -666,7 +741,7 @@ body div.component div.reviewsRatingsContainer .ratingComponent{
   line-height: 30px;
   text-align: center;
   font-size: 2.4rem;
-  color: rgba(114, 170, 114, 0.726);
+  color: #606c38;
 }
 
 .pop_up_title {
@@ -683,9 +758,12 @@ body div.component div.reviewsRatingsContainer .ratingComponent{
   font-weight: bold;
 }
 
+hr {
+  border-top: 1px solid #606c38;
+}
+
 hr.form_hr {
   width: 80%;
-  border-top: 1px solid #d1d1d1;
   margin-bottom: 15px;
 }
 
@@ -700,7 +778,7 @@ hr.form_hr {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin-top: 3px;
+  margin: 3px 0px;
   font-family: 'Poppins', sans-serif;
   font-size: .9rem;
 }
@@ -713,7 +791,8 @@ hr.form_hr {
 }
 
 .pop_up_input_form:focus {
-  outline: 2px solid rgba(114, 170, 114, 0.726);
+  outline: none;
+  box-shadow: 0 0 0 2pt #606c38;
   border-radius: 4px;
   font-family: 'Poppins', sans-serif;
   font-size: .9rem;
@@ -745,7 +824,8 @@ hr.form_hr {
 }
 
 .pop_up_input_form_textarea:focus {
-  outline: 2px solid rgba(114, 170, 114, 0.726);
+  outline: none;
+  box-shadow: 0 0 0 2pt #606c38;
   border-radius: 4px;
   font-family: 'Poppins', sans-serif;
   font-size: .9rem;
@@ -820,10 +900,18 @@ hr.form_hr {
   width: 200px;
   border: none;
   color: white;
-  background-color: rgb(241, 145, 81);
+  background-color: #dda15e;
   border-radius: 4px;
   font-family: 'Poppins', sans-serif;
   font-size: .9rem;
   margin: 0 auto;
   cursor: pointer;
+}
+
+i.fas.fa-check-circle {
+  color: #606c38;
+}
+
+i.fas.fa-star {
+  color: #dda15e;
 }
