--- a/client/components/ratings-review/Ratings.css
+++ b/client/components/ratings-review/Ratings.css
@@ -40,10 +40,13 @@
 
 .sort {
   text-align: right;
-
   padding: 5px;
   width: 100%;
   height: 35px;
+  padding-right: 25px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .popup-box {
@@ -116,5 +119,5 @@
   height: 10px;
   width: 50%;
   max-width: 100%;
-  background: rgba(114, 170, 114, 0.726);
+  background: #606c38;
 }
