--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,7 @@ body, html {
   color: rgb(87, 87, 87);
 }
 
+
 /* Main Nav Bar */
 
   body div.nav {
@@ -13,7 +14,7 @@ body, html {
     position: relative;
     width: 100%;
     max-width: 1280px;
-    background-color: #606c38;
+    background-color: #283618;
     height: 80px;
     margin: 0px auto 20px auto;
     padding: 0px;
@@ -31,7 +32,7 @@ body, html {
     display: flex;
     position: relative;
     width: 100%;
-    background-color: #606c38;
+    background-color: #283618;
     height: 80px;
     margin: 0px auto 20px auto;
     padding: 0px;
@@ -101,6 +102,7 @@ h2 {
   margin: 0px;
   color: rgb(87, 87, 87);
   font-family: 'Poppins', sans-serif;
+  color: #606c38;
 }
 
 h3 {
@@ -393,16 +395,18 @@ div.component div.q_a_component {
 
 /* SEARCHBAR */
 div.q_a_component div.searchBar_container {
+  display: block;
   margin: 10px 0px;
   padding: 0px;
 }
 
 div.searchBar_container .searchbar {
-  height: 65px;
+  height: 50px;
   width: 100%;
   color:rgb(87, 87, 87);
   border: none;
-  border: 1px solid rgb(87, 87, 87);
+  border-top: 2px solid #d6d6d6;
+  background-color: #ececec;
   margin: 10px 0px;
   padding: 0px 15px;
   -webkit-box-sizing: border-box;
@@ -414,19 +418,8 @@ div.searchBar_container .searchbar {
 }
 
 .searchbar:focus {
-  height: 65px;
-  width: 100%;
-  color:rgb(87, 87, 87);
-  border: none;
   outline: none;
   box-shadow: 0 0 0 2pt #606c38;
-  margin: 10px 0px;
-  padding: 0px 15px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 1.1rem;
-  font-weight: bold;
 }
 
 ::placeholder {
@@ -758,12 +751,19 @@ body div.component div.reviewsRatingsContainer .ratingComponent{
   font-weight: bold;
 }
 
+
 hr {
-  border-top: 1px solid #606c38;
+  border-top: 1px solid #d6d6d6;
+}
+
+hr.review_hr {
+  border-top: 1px solid #d6d6d6;
+  width: 90%;
 }
 
 hr.form_hr {
   width: 80%;
+  border-top: 1px solid #606c38;
   margin-bottom: 15px;
 }
 
@@ -914,4 +914,12 @@ i.fas.fa-check-circle {
 
 i.fas.fa-star {
   color: #dda15e;
+}
+
+i.fas.fa-search {
+  position: absolute;
+  right: 150px;
+  top: 100px;
+  font-size: 1.4rem;
+  color: rgb(160, 160, 160);
 }
