--- a/client/components/ratings-review/Ratings.css
+++ b/client/components/ratings-review/Ratings.css
@@ -1,10 +1,12 @@
 .addButton {
-  height: 65px;
+  display: inline-block;
   width: 200px;
+  height: 50px;
+  margin: 10px 0px;
   font-weight: bold;
-  font-size: 1rem;
-  border: none;
-  border: 1px solid black;
+  font-size: .9rem;
+  border: 1px solid rgb(87, 87, 87);
+  border-radius: 4px;
   padding: 0px 20px;
   color: rgb(87, 87, 87);
   cursor: pointer;
@@ -12,13 +14,17 @@
   grid-row-start: 2;
 }
 
+
+
 .moreButton {
-  height: 65px;
+  display: inline-block;
   width: 200px;
+  height: 50px;
+  margin: 10px 0px;
   font-weight: bold;
-  font-size: 1rem;
-  border: none;
-  border: 1px solid black;
+  font-size: .9rem;
+  border: 1px solid rgb(87, 87, 87);
+  border-radius: 4px;
   padding: 0px 20px;
   color: rgb(87, 87, 87);
   cursor: pointer;
@@ -41,7 +47,6 @@
 .sort {
   text-align: right;
   padding: 5px;
-  width: 100%;
   height: 35px;
   padding-right: 25px;
   -webkit-box-sizing: border-box;
