Completed the filter by star feature and updated the characteristic CSS

--- a/client/components/ratings-review/AddReviewForm/AddReview.css
+++ b/client/components/ratings-review/AddReviewForm/AddReview.css
@@ -101,3 +101,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+.errors{
+  color: red;
+  font-size: .7rem;
+  list-style-type: none;
+}
+
+.eachStar:hover {
+  color: green;
+}
