--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,8 @@ body, html {
 /* Main Nav Bar */
 
   body div.nav {
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
     position: relative;
     width: 100%;
     max-width: 1280px;
@@ -29,7 +30,7 @@ body, html {
 
 @media (min-width:1280px){
   body div.nav {
-    display: flex;
+    grid-template-columns: 25% 50% 25%;
     position: relative;
     width: 100%;
     background-color: #283618;
@@ -55,8 +56,21 @@ body .site_wide_announce {
 /* Nav Logo */
 
 body div.nav .logo {
-  height: 100%;
+  height: 50px;
 
+}
+
+i.fas.fa-street-view.fa-xs {
+  font-size: 2.5rem;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.jairIcon {
+  position: fixed;
+  bottom: 30px;
+  right: 100px;
+  font-size: 1rem;
 }
 
 /* Jair */
@@ -98,8 +112,17 @@ body div.component {
   }
 }
 
-.makeTransparent {
-  color: #fffffff3;
+h1.makeTransparent {
+  color:#283618;
+  margin: none;
+  padding: none;
+  height: 80px;
+  overflow: hidden;
+}
+
+.logo {
+  justify-self: center;
+  height: 60px;
 }
 
 h1 {
@@ -283,7 +306,7 @@ div.productOverView {
 .category-item {
   font-size: 25px;
   margin-bottom: 0px;
-  margin-top: -20px;
+  margin-top: -15px;
 }
 
 .cate {
@@ -354,7 +377,7 @@ div.productOverView {
   height: 50px;
   margin: 10px 625px;
   font-weight: bold;
-  font-size: .9rem;
+  font-size: 1.2rem;
   border: none;
   border-bottom: 2px solid rgb(87, 87, 87);
   border-radius: 4px;
@@ -755,8 +778,8 @@ div.q_a_buttons .buttons {
 
 body div.component .reviewsRatingsContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 10px;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 20px;
   align-items: start;
 
   width: auto;
